# n_imagenet

./: .gitignore  pyproject.toml
base/train/: caption_trainer.py  common_trainer.py
base/utils/: parse_utils.py
real_cnn_model/data/: data_container.py  imagenet.py
src/n_imagenet/: main.py
src/n_imagenet/base/train/: caption_trainer.py  common_trainer.py  mini_batch_trainer.py  trainer.py
src/n_imagenet/base/utils/: tracker.py
src/n_imagenet/data/: data_container.py  imagenet.py
src/n_imagenet/models/: model_container.py
src/n_imagenet/train/: trainer.py
