[project]
name = "n-imagenet"
version = "1.0.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/n_imagenet"]

[tool.pixi.tasks]
train = {cmd = "python src/n_imagenet/main.py --config configs/imagenet/cnn_adam_acc_two_channel_big_kernel_random_idx.ini"}

[tool.pixi.pypi-dependencies]
n-imagenet = { path = ".", editable = true }

[tool.pixi.system-requirements]
cuda = "12"

[tool.pixi.dependencies]
python="*"
pytorch-gpu="*"
torchvision="*"
cudatoolkit="*"
opencv="*"
tqdm="*"
scikit-video="*"
eigen="*"
boost="*"
boost-cpp="*"
pybind11="*"
nltk="*"
flake8="*"
tensorboard="*"
scikit-image="*"
matplotlib="*"
pytorch_scatter = "*"
